--- a/web/teacher/index.xhtml
+++ b/web/teacher/index.xhtml
@@ -69,6 +69,9 @@
                     background-color: red;
                     width: 100%;
                 }
+                .sidebar{
+                    display: none;
+                }
                 
             </style>
         </ui:define>
