whole day trying a shoot

--- a/web/teacher/grades.xhtml
+++ b/web/teacher/grades.xhtml
@@ -38,7 +38,9 @@
                 </div>
 
 
-                <div class="fixed w-full h-full bg-gray-50 z-10 top-0 newgrades"></div>
+                <div class="fixed w-full h-full bg-gray-50 z-10 top-0 newgrades">
+                    
+                </div>
 
                 <div class="newgrades absolute w-[40%]  z-10 bg-white shadow-lg top-10 p-3 px-7 left-1/2 ml-[-20%]">
                     <div class="absolute top-0 right-0 text-red-800 text-4xl" onclick="closeGrades()">X</div>
