--- a/web/student/announcement.xhtml
+++ b/web/student/announcement.xhtml
@@ -2,51 +2,56 @@
 <!DOCTYPE html
     PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+    xmlns:ui="http://xmlns.jcp.org/jsf/facelets" xmlns:f="http://xmlns.jcp.org/jsf/core"
+    xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 
-    <h:head>
-        <title>Announcements</title>
-        <style>
-            .ancmt span {
-                color: rgb(90, 88, 88);
-            }
-        </style>
-    </h:head>
+<h:head>
+    <title>Announcements</title>
+    <style>
+        .ancmt span {
+            color: rgb(90, 88, 88);
+        }
+    </style>
+</h:head>
 
-    <body>
-        <ui:composition template="common.xhtml">
-            <ui:define name="title">
-                <h1 class="ml-10 p-3 text-4xl font-bold text-red-800">Announcements</h1>
-            </ui:define>
-            <ui:define name="content">
+<body>
+    <ui:composition template="common.xhtml">
+        <ui:define name="metadata">
+        </ui:define>
+        <ui:define name="title">
+            <h1 class="ml-10 p-3 text-4xl font-bold text-red-800">Announcements</h1>
+        </ui:define>
+        <ui:define name="content">
             <div class="container-fluid row">
                 <div class="col-md-9">
                     <div class="ancmt">
+                        <ui:repeat value="#{announcementBean.announcements}" var="announcement">
+                            <div class=" ">
+                                <h4>#{announcement.getColumnObject(1)}</h4>
+                                <p>#{announcement.getColumnObject(2)} </p>
+                                <span>#{announcement.getColumnObject(4)}</span>
+                                <hr />
+                            </div>
+                        </ui:repeat>
                         <div class=" ">
                             <h4>Bilgisayar mughendisligine giris</h4>
                             <p>summary is going to be here </p>
                             <span>23/07/2021 16pm</span>
+                            <hr />
                         </div>
                         <div class=" ">
-                            <hr />
                             <h4>Bilgisayar mughendisligine giris</h4>
                             <p>summary is going to be here </p>
                             <span>23/07/2021 16pm</span>
-                        </div>
-                        <div class=" ">
                             <hr />
-                            <h4>Bilgisayar mughendisligine giris</h4>
-                            <p>summary is going to be here </p>
-                            <span>23/07/2021 16pm</span>
                         </div>
                     </div>
 
 
                 </div>
-
             </div>
-            </ui:define>
-        </ui:composition>
-    </body>
+        </ui:define>
+    </ui:composition>
+</body>
 
 </html>
