--- a/web/student/grades.xhtml
+++ b/web/student/grades.xhtml
@@ -26,17 +26,19 @@
                             <th>Out of</th>
                         </tr>
 
+                        <ui:repeat value="#{studentBean.grades}" var="grade">
                         <div class="student">
                             <tr>
 
-                                <td>midterm exam </td>
-                                <td>Apr 21 by 11AM</td>
-                                <td>80</td>
-                                <td>100</td>
+                                <td>#{grade.getColumnObject(1)} </td>
+                                <td>#{grade.getColumnObject(2)} </td>
+                                <td class="points">#{grade.getColumnObject(3)} </td>
+                                <td class="range">#{grade.getColumnObject(4)} </td>
 
                             </tr>
 
                         </div>
+                        </ui:repeat>
                         <div class="student">
                             <tr>
 
@@ -54,8 +56,8 @@
 
                                 <td>Total Points </td>
                                 <td></td>
-                                <td>80</td>
-                                <td>100</td>
+                                <td id="totalPoints">80</td>
+                                <td id="totalRange">100</td>
 
                             </tr>
 
