--- a/web/student/availablecourse.xhtml
+++ b/web/student/availablecourse.xhtml
@@ -1,107 +1,85 @@
 <?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
-    <h:head>
-        <title>Available courses</title>
-    </h:head>
-    <h:body>
-        <ui:composition template="common.xhtml">
-            <ui:define name="title">
-                <h1 class="ml-10 p-3 text-4xl font-bold text-red-800">Leon Emmanuel ISHIMWE</h1>
-            </ui:define>
+<!DOCTYPE html
+    PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
+    xmlns:ui="http://xmlns.jcp.org/jsf/facelets" xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+    xmlns:f="http://xmlns.jcp.org/jsf/core">
+<h:head>
+    <title>Available courses</title>
+</h:head>
+<h:body>
+    <ui:composition template="common.xhtml">
+        <ui:define name="title">
+            <h1 class="ml-10 p-3 text-4xl font-bold text-red-800">Leon Emmanuel ISHIMWE</h1>
+        </ui:define>
 
-            <ui:define name="content">
-                <div class="container-fluid text-center">
-                    <div class="row">
-                        <div class="col-md-7">
-                            <h2>
-                                Available courses
-                            </h2> 
-                        </div>
+        <ui:define name="content">
+            <div class="container-fluid text-center">
+                <div class="row">
+                    <div class="col-md-7">
+                        <h2>
+                            Available courses
+                        </h2>
+                    </div>
 
-                        <!--div class="col-md-5">
-                            <h:form>
-                                <h:inputText value="" > 
-                            </h:form> 
-                        </div-->
-
-                    </div>           
                 </div>
+            </div>
 
-                <ui:repeat value="#{availableCoursesBean.courses}" var="avcourse">
-                    <div class="course">
-                        <h:form>
-                            <div class="row">
-                                <div class="col-md-8">
-                                    <h4 class="coursename">#{avcourse.getColumnObject(5)}</h4>
-                                    <h6>#{avcourse.getColumnObject(2)} #{avcourse.getColumnObject(1)}</h6>
-                                </div>
-                                <div class="col-md-4">
-                                    <h:panelGroup rendered="#{empty avcourse.getColumnObject(6)}">
-                                        <h:commandButton class="btn btn-lg" value="Join">
-                                            <f:ajax listener="#{availableCoursesBean.join(avcourse.getColumnObject(4))}" onevent="joinedClass"/>
-                                        </h:commandButton>
-                                    </h:panelGroup>
-                                    <h:panelGroup rendered="#{not empty avcourse.getColumnObject(6)}">
-                                        <button disabled="true" class="btn btn-lg">Joined already</button>
-                                    </h:panelGroup>
-                                </div>
+            <ui:repeat value="#{availableCoursesBean.courses}" var="avcourse">
+                <div class="course">
+                    <h:form>
+                        <div class="row">
+                            <div class="col-md-8">
+                                <h4 class="coursename">#{avcourse.getColumnObject(5)}</h4>
+                                <h6>#{avcourse.getColumnObject(2)} #{avcourse.getColumnObject(1)}</h6>
                             </div>
-                        </h:form>
-                    </div>
-                </ui:repeat>
-
-                <div class="course">
-                    <div class="row">
-                        <div class="col-md-8">
-                            <h4 class="coursename">Design and Implementation of IoT systems</h4>
-                            <h6>professor: Edson casimiro</h6>
+                            <div class="col-md-4">
+                                <h:panelGroup rendered="#{empty avcourse.getColumnObject(6)}">
+                                    <h:commandButton class="btn btn-lg" value="Join">
+                                        <f:ajax listener="#{availableCoursesBean.join(avcourse.getColumnObject(4))}"
+                                            onevent="joinedClass" />
+                                    </h:commandButton>
+                                </h:panelGroup>
+                                <h:panelGroup rendered="#{avcourse.getColumnObject(6) == 'accepted'}">
+                                    <button disabled="true" class="btn btn-lg bg-green-600 text-white">Enrolled</button>
+                                </h:panelGroup>
+                                <h:panelGroup rendered="#{avcourse.getColumnObject(6) == 'waiting'}">
+                                    <button disabled="true" class="btn btn-lg bg-green-600 text-white">Waiting for
+                                        approval</button>
+                                </h:panelGroup>
+                                <h:panelGroup rendered="#{avcourse.getColumnObject(6) == 'rejected'}">
+                                    <button disabled="true" class="btn btn-lg text-red-600 font-bold bg-white">Rejected !!!</button>
+                                </h:panelGroup>
+                            </div>
                         </div>
-                        <div class="col-md-4">
-                            <button class="btn btn-lg">Join</button>
-                        </div>
-                    </div>
+                    </h:form>
                 </div>
-
-                <div class="course">
-                    <div class="row">
-                        <div class="col-md-8">
-                            <h4 class="coursename">Design and Implementation of IoT systems</h4>
-                            <h6>professor: Edson casimiro</h6>
-                        </div>
-                        <div class="col-md-4">
-                            <button class="btn btn-lg">Join</button>
-                        </div>
-                    </div>
-                </div>
+            </ui:repeat>
 
 
-            </ui:define>
+        </ui:define>
 
-            <ui:define name="style">
-                <style>
-                    .coursename{
-                        font-weight: bold;
-                    }
-                    .course{
-                        margin-top:30px;
-                        margin-top:30px;
+        <ui:define name="style">
+            <style>
+                .coursename {
+                    font-weight: bold;
+                }
 
-                    }
-                    .btn{
-                        width: 100%;
-                        color:white;
-                        background-color:red;
-                    }
+                .course {
+                    margin-top: 30px;
+                    margin-top: 30px;
 
-                </style>
+                }
 
-            </ui:define>
-        </ui:composition>
-    </h:body>
+                .btn {
+                    width: 100%;
+                    color: white;
+                    background-color: red;
+                }
+            </style>
+
+        </ui:define>
+    </ui:composition>
+</h:body>
+
 </html>
-
