--- a/web/teacher/grades.xhtml
+++ b/web/teacher/grades.xhtml
@@ -35,20 +35,20 @@
                             </tr>
 
 
-                            <ui:repeat value="#{gradesBean.quizzes}" var="quiz">
+                            <ui:repeat value="#{gradesBean.grades}" var="grade">
                                 <tr class="text-gray-600 p-3 border-b border-gray-600">
-                                    <td class="p-3">Leon Emma #{quiz}</td>
-                                    <td class="p-3">Quiz 1</td>
-                                    <td class="p-3">May 21, 2021</td>
+                                    <td class="p-3">#{grade.getColumnObject(1)}</td>
+                                    <td class="p-3">#{grade.getColumnObject(2)}</td>
+                                    <td class="p-3">#{grade.getColumnObject(3)}</td>
                                     <td class="p-3">
-                                        <h:inputText value="#{quiz}" disabled="#{param.action == 'view'}" >
-                                            <!--<f:passThroughAttribute name="student" value="1" />-->
+                                        <h:inputText value="#{grade.getColumnObject(4)}" disabled="#{param.action == 'view'}" >
+                                            <f:passThroughAttribute name="student" value="1" />
                                             <!--<f:passThroughAttribute name="field" value="points" />-->
                                             <f:ajax event="change" execute="@this"  listener="#{gradesBean.updatePoints}"/>
                                         </h:inputText>
                                     </td>
                                     <td class="p-3">
-                                        <h:inputText value="#{gradesBean.point}" />
+                                        <h:inputText value="#{grade.getColumnObject(5)}" />
                                     </td>
                                 </tr>
                             </ui:repeat>
