--- a/web/teacher/grades.xhtml
+++ b/web/teacher/grades.xhtml
@@ -3,16 +3,19 @@
     PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+      xmlns:p="http://xmlns.jcp.org/jsf/passthrough"
+      xmlns:jsf="http://xmlns.jcp.org/jsf">
     <h:head>
         <title>Grades - Course</title>
     </h:head>
     <h:body>
         <ui:composition template="common.xhtml">
             <ui:define name="metadata">
-<!--                <f:metadata>
-                    <f:viewAction action="" />
-                </f:metadata>-->
+                <!--                <f:metadata>
+                                    <f:viewAction action="" />
+                                </f:metadata>-->
             </ui:define>
             <ui:define name="title">
                 <h1 class="text-5xl font-bold text-center p-2">All Grades
@@ -24,35 +27,40 @@
             <ui:define name="content" id="view100">
                 <div>
                     <h:panelGroup id="gradestable">
+                        #{gradesBean.currentQuiz} - #{gradesBean.action}
                         <h:form>
-                        <table>
-                            <tr class="font-bold text-2xl p-3 border-b border-gray-600">
-                                <td class="p-3">Student name</td>
-                                <td class="p-3">Quiz name</td>
-                                <td class="p-3">Date</td>
-                                <td class="p-3">Points</td>
-                                <td class="p-3">Out of</td>
-                            </tr>
-
-
-                            <ui:repeat value="#{gradesBean.grades}" var="grade">
-                                <tr class="text-gray-600 p-3 border-b border-gray-600">
-                                    <td class="p-3">#{grade.getColumnObject(1)}</td>
-                                    <td class="p-3">#{grade.getColumnObject(2)}</td>
-                                    <td class="p-3">#{grade.getColumnObject(3)}</td>
-                                    <td class="p-3">
-                                        <h:inputText value="#{grade.getColumnObject(4)}" disabled="#{param.action == 'view'}" >
-                                            <f:passThroughAttribute name="student" value="1" />
-                                            <!--<f:passThroughAttribute name="field" value="points" />-->
-                                            <f:ajax event="change" execute="@this"  listener="#{gradesBean.updatePoints}"/>
-                                        </h:inputText>
-                                    </td>
-                                    <td class="p-3">
-                                        <h:inputText value="#{grade.getColumnObject(5)}" />
-                                    </td>
+                            <table>
+                                <tr class="font-bold text-2xl p-3 border-b border-gray-600">
+                                    <td class="p-3">Student name</td>
+                                    <td class="p-3">Quiz name</td>
+                                    <td class="p-3">Date</td>
+                                    <td class="p-3">Points</td>
+                                    <td class="p-3">Out of</td>
                                 </tr>
-                            </ui:repeat>
-                        </table>
+
+
+                                <ui:repeat value="#{gradesBean.grades}" var="grade">
+                                    <tr class="text-gray-600 p-3 border-b border-gray-600">
+                                        <td class="p-3">#{grade.getColumnObject(2)}</td>
+                                        <td class="p-3">#{grade.getColumnObject(3)}</td>
+                                        <td class="p-3">#{grade.getColumnObject(4)}</td>
+                                        <td class="p-3">
+                                           
+                                            <c:set var="value" value="#{grade.getColumnObject(5)}" />
+                                            <input type="text" jsf:value="#{value}" jsf:disabled="#{gradesBean.action == 'view'}" student="#{grade.getColumnObject(1)}">
+                                                <f:passThroughAttribute name="model" value="points"/>
+                                                <f:ajax listener="#{gradesBean.updatePoints(evt)}"/>
+                                            </input>
+                                        </td>
+                                        <td class="p-3">
+                                            <input type="text" value="#{grade.getColumnObject(5)}" jsf:disabled="#{gradesBean.action == 'view'}" student="#{grade.getColumnObject(1)}">
+                                                <f:passThroughAttribute name="model" value="range"/>
+                                                <f:ajax listener="#{gradesBean.updatePoints(evt)}"/>
+                                            </input>
+                                        </td>
+                                    </tr>
+                                </ui:repeat>
+                            </table>
                         </h:form>
                     </h:panelGroup>
 
@@ -65,19 +73,20 @@
                         <div class="text-red-700 font-bold text-sm mb-3">
                             <label class="block" for="quizname">Quiz name</label>
                             <h:selectOneMenu class="bg-red-50 w-full p-1.5 rounded-lg" value="#{gradesBean.currentQuiz}">
-                                <f:selectItems value="#{quizz.quizzes}" var="quiz" itemLabel="#{quiz.getColumnObject(3)}" itemValue="#{quiz.getColumnObject(1)}"/>
+                                <f:selectItems value="#{gradesBean.quizzes}" var="quiz" itemLabel="#{quiz.getColumnObject(2)}" itemValue="#{quiz.getColumnObject(1)}"/>
+                                <f:ajax execute="@form"/>
                             </h:selectOneMenu>
                         </div>
                         <div id="view101"></div>
                         <div>
-                            <h:commandButton action="#{gradesBean.getLink}" class="bg-red-800 text-white p-3 rounded-lg" value="View">
-                                <f:param name="action" value="view" />
-                                <f:param name="course" value="#{param.course}" />
+                            <h:commandButton class="bg-red-800 text-white p-3 rounded-lg" value="View">
+                                <f:setPropertyActionListener target="#{gradesBean.action}" value="view"/>
+                                <f:ajax render=":gradesTable" execute="@form" onevent="closeGrades();return true"/>
                             </h:commandButton>
 
-                            <h:commandButton action="#{gradesBean.getLink}" class="bg-red-800 text-white p-3 rounded-lg" value="Add/Edit">
-                                <f:param name="action" value="edit" />
-                                <f:param name="course" value="#{param.course}" />
+                            <h:commandButton class="bg-red-800 text-white p-3 rounded-lg" value="Add/Edit">
+                                <f:setPropertyActionListener target="#{gradesBean.action}" value="edit"/>
+                                <f:ajax render=":gradesTable" execute="@form" onevent="closeGrades();return true"/>
                             </h:commandButton>
                         </div>
                     </h:form>
