--- a/web/student/grades.xhtml
+++ b/web/student/grades.xhtml
@@ -67,6 +67,9 @@
 
 
             </div>
+            <script>
+                window.onload = ()=>updateTotalPoints();
+            </script>
         </ui:define>
 
         <ui:define name="style">
